lessons/14-capstone/solution/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: capstone
